# smart-contracts

./: LICENSE  README.md  blockchain_4edge_9robots_100000ms_latency_new.json  blockchain_4edge_9robots_200000ms_latency_new.json  lib_blockchain_v7.py  lib_cpNet_v8.py  lib_cpNode_v6.py  lib_fl_v4.py  lib_secret_sharing_v7.py  lib_secret_sharing_v8.py  lib_simulation_v5.py  lib_wireless_v2.py  plots_v1.py  pyproject.toml  results_4edge_9robots_100000ms_latency_new.pkl  results_4edge_9robots_200000ms_latency_new.pkl
dataset/: split_3.npz
